--- a/app/src/main/res/anim/rotate.xml
+++ b/app/src/main/res/anim/rotate.xml
@@ -2,6 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <rotate
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:duration="600"
         android:fromDegrees="0"
         android:toDegrees="360"
