--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -11,18 +11,26 @@
         android:id="@+id/rlWrapper"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <SurfaceView
             android:id="@+id/svCamera"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:visibility="visible" />
+
+        <!--<nl.bedrijvendagen.bedrijvendagen.CameraSourcePreview-->
+            <!--android:id="@+id/preview"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1" />-->
 
         <Button
             android:id="@+id/bManualInput"
@@ -41,6 +49,8 @@
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:adjustViewBounds="false"
+            android:cropToPadding="false"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/qrview" />
 
